hphp/test/zend/good/ext/ctype/tests/bug34645.php
<?php
$id = 394829384;
var_dump(ctype_digit($id));
var_dump($id);
?>